# nitroplast

./: .gitattributes  .gitignore  bbigelowii-c-term-extensions-compared-to-ucyna-missing-streme.xml  hello.py  hmm-out  kalign-I20250212-114828-0157-67039726-p1m.aln-clustalw  kalign-I20250212-114828-0157-67039726-p1m.fa  kalign-I20250212-114828-0157-67039726-p1m.pim  mast-bbigelowii-c-term-extensions-compared-to-ucyna-missing.fasta.xml  muscle.sbatch  pyproject.toml
data/: ADK1075_ProteinQuantifications.csv  ADK1075_proteomics_DB_2.fasta  Bbigelowii_transcriptome_annotations.csv  CLUSTALW Result  Data_S1_Bbigelowii_proteins.csv  Data_S2_UCYN-A_proteins.csv  Data_S3_Biosynthesis.csv  Data_S4_Diazotrophy_related.csv  Data_S5_Ferredoxin_and_flavodox.csv  Data_S6_Regulatory_etc.csv  Data_S7_Fig3Ainfo.csv  Import_candidates.fasta  README.md  UCYNA2_genome_descriptions.csv  bb_no_extension_seqs.fasta  clustalo-I20240503-142211-0193-1306826-p1m.aln-clustal_num  crocosphaera_proteins.fasta  go-basic.obo  good-c-term-full.fasta  uTP_HMM_hits.fasta  ucyn-a_enriched_cobalt_cleaned.fa  ucyna_enriched_good_c_align_full_sequences.fasta  ucyna_proteins.fasta
figures/: README.md  style.py
genomes/: crocosphaera.gb  ucyna.gb
manuscript/: main.tex  references.bib
notebooks/: comparative-genome.ipynb  haptophyte-phylogeny.ipynb  lost-proteins.ipynb  new-extensions.ipynb  pathways copy.ipynb  pathways.ipynb
results/: bbigelowii-c-term-extensions-compared-to-crocospheara.fasta  bidirectional-blast.csv  c-term-extensions.fasta  lost_proteins.fasta  lost_proteins_best_hitst_to_bb.m8  (+7 more)
(+100139 files in other folders)
