[project]
name = "nitroplast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.84",
    # "diamond4py==0.0.3",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib-venn>=1.1.1",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "tqdm>=4.67.0",
    "seaborn>=0.13.2",
    "pyopa>=0.8.4",
]
